# cesia-input-method

./: .gitattributes  .gitignore  .gitmodules  CNAME  DESIGN.md  LICENSE  LOCALIZATION_PLAN.md  PRODUCT_PLAN.md  README.md  build.gradle  cesia-release.keystore  gradle.properties  gradlew  gradlew.bat  index.html  rebuild_dict.py  settings.gradle
.github/workflows/: build-ai-engine.yml  build-apk.yml  build-librime.yml  build.yml  ci.yml  fetch-keystore.yml  semgrep.yml
ai-engine/: build.gradle.kts
ai-engine/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
ai-engine/src/main/cpp/: CMakeLists.txt  llama-jni.cpp  mnn-llm.cpp  whisper-jni.cpp
ai-engine/src/main/cpp/SPIRV-Headers/install/share/cmake/SPIRV-Headers/: SPIRV-HeadersConfig.cmake
ai-engine/src/main/cpp/SPIRV-Headers/install/share/pkgconfig/: SPIRV-Headers.pc
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: gbk.dict.yaml  opencc_s2t.json  pinyin_dict.json  t9_dict.db
app/src/main/assets/qwen35-2b-mnn/: config.json
app/src/main/assets/rime/: default.yaml  en.dict.yaml  en.schema.yaml  pinyin.schema.yaml  rime_ice.dict.yaml  s2t.json  simp_trad_map.txt  t9_pinyin.prism.yaml  t9_pinyin.schema.yaml  t9_spell.schema.yaml
app/src/main/cpp/: CMakeLists.txt  whisper-jni.cpp
app/src/main/java/com/cesia/input/: CandidateAdapter.kt  CandidatePrefs.kt  CesiaInputMethod.kt  CesiaKeyboardView.kt  CesiumInputMethod.kt  DownloadProgressBus.kt  FilePickerActivity.kt  HistoryActivity.kt  NewsSourceActivity.kt  NewsSourceModel.kt  PersonalizationActivity.kt  PolishHistoryActivity.kt  RssFetchManager.kt  RssParser.kt  ScreenReaderService.kt  SettingsActivity.kt  SymbolPanel.kt
app/src/main/java/com/cesia/input/ai/: AIEngine.kt  LocalModeManager.kt  LocalModeToggleHelper.kt  VoiceAISettingsHelper.kt
app/src/main/java/com/cesia/input/api/: ApiClient.kt
app/src/main/java/com/cesia/input/audio/: AudioRecorder.kt
app/src/main/java/com/cesia/input/engine/: PinyinDictManager.kt  PinyinEngine.kt  T9Engine.kt  TypelessEngine.kt
app/src/main/java/com/cesia/input/instruction/: InstructionSet.kt
app/src/main/java/com/cesia/input/model/: ModelDownloadManager.kt  ModelInfo.kt  ModelManager.kt
app/src/main/java/com/cesia/input/onboarding/: CloudSetupFragment.kt  CompleteFragment.kt  DownloadFragment.kt  OnboardingActivity.kt  OnboardingViewModel.kt  WelcomeFragment.kt
app/src/main/java/com/cesia/input/polish/: PolishService.kt
app/src/main/java/com/cesia/input/recognizer/: FallbackRecognizer.kt  WhisperRecognizer.kt
app/src/main/java/com/cesia/input/stats/: GrammarGuideManager.kt  MagicHistoryManager.kt  PolishHistoryManager.kt  PolishStatsManager.kt
app/src/main/java/com/cesia/input/t9/: CandidatePrefs.kt  T9ComboAdapter.kt  T9Composer.kt
app/src/main/java/com/cesia/input/ui/: CustomKeyboardView.kt
app/src/main/java/com/cesia/input/utils/: ColorUtils.kt  OpenCCConverter.kt
app/src/main/java/com/cesia/input/voice/: VoiceEngine.kt  VoiceRecorder.kt
app/src/main/java/com/cesia/input/wakeword/: WakeWordDetector.kt
app/src/main/java/com/cesia/input/wenet/: WenetManager.kt
app/src/main/jni/librime_jni/: rime_jni.cc  utf8.h
app/src/main/res/drawable/: bg_card_tiffany.xml  bg_onboarding_icon_bg.xml  bg_step_circle_primary.xml  bg_step_circle_secondary.xml  button_background_border.xml  button_glow_anim.xml  glow_frame_1.xml  glow_frame_2.xml  glow_frame_3.xml  ic_delete.xml  ic_edit.xml  ic_expand_more.xml  ic_refresh_small.xml  ic_send.xml  ic_star.xml  ic_star_five.xml  key_background_dark.xml  magic_item_bg.xml  popup_bg.xml  progress_bar_horizontal.xml  spinner_bg_white.xml  status_dot_error.xml  status_dot_idle.xml  status_dot_processing.xml  status_dot_recording.xml  status_dot_recording_pulse.xml  status_dot_red_0.xml  status_dot_red_100.xml  status_dot_red_25.xml  status_dot_red_50.xml  status_dot_red_75.xml  status_dot_selector.xml  status_dot_theme_0.xml  status_dot_theme_100.xml  status_dot_theme_25.xml  status_dot_theme_50.xml  status_dot_theme_75.xml  status_dot_theme_pulse.xml  triangle_gray_down.xml  triangle_gray_up.xml  (+1 more)
app/src/main/res/layout/: activity_news_source.xml  activity_onboarding.xml  dialog_custom_value.xml  dialog_fetch_confirm.xml  dialog_model_selector.xml  dialog_news_source_picker.xml  dialog_news_sources.xml  dialog_ollama_address.xml  dialog_polish_prompt.xml  dialog_voice_polish_selector.xml  fragment_cloud_setup.xml  fragment_command_words.xml  fragment_complete.xml  fragment_download.xml  fragment_welcome.xml  input_view.xml  item_clipboard_grid.xml  item_custom_value.xml  item_magic_grid.xml  item_model_selector.xml  item_news_source.xml  item_rss_category.xml  item_rss_source.xml  item_smart_command.xml  item_word_split.xml  popup_candidate_menu.xml  popup_clipboard_actions.xml  popup_clipboard_manager.xml  popup_magic_menu.xml  popup_smart_writing.xml  popup_theme.xml  popup_word_split.xml  settings.xml  spinner_dropdown_cloud_model.xml  spinner_item_cloud_model.xml  symbol_context_menu.xml  symbol_panel.xml  view_onboarding_banner.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: method.xml  network_security_config.xml  number.xml  qwerty.xml  symbols.xml  symbols_cn.xml  symbols_en.xml  t9.xml
app/src/test/java/com/cesia/input/: ChineseDigitsTest.kt  ColorUtilsTest.kt  OpenCCConverterTest.kt  VoiceCommandTraditionalTest.kt
docker/: Dockerfile  build-librime.sh  sudoers-ca
docs/: latest.json
gradle/wrapper/: gradle-wrapper.properties
keyboard/: build.gradle.kts
keyboard/src/main/assets/keyboards/: qwerty.json
keyboard/src/main/java/com/cesia/keyboard/data/: KeyboardData.kt  KeyboardLoader.kt
patches/: ggml-vulkan-adreno.patch
rime-engine/: build.gradle.kts  consumer-rules.pro
rime-engine/src/main/assets/rime/: default.yaml  pinyin.dict.yaml  pinyin.schema.yaml
rime-engine/src/main/cpp/: CMakeLists.txt  rime_jni.cc  rime_jni.cpp  rime_jni.h
rime-engine/src/main/java/com/cesia/rime/: InputEngine.kt  RimeDefaults.kt  RimeEngine.kt
rules/: ime-bugs.yaml  ime-security.yaml
(+18 files in other folders)
